--- a/config/demo-dev.properties
+++ b/config/demo-dev.properties
@@ -1,3 +1,6 @@
-server.port=9090
-spring.application.name=eureka.client.demo.1
-eureka.client.serviceUrl.defaultZone=http://localhost:7070/eureka/
+#server.port=9090
+#spring.application.name=eureka.client.demo.1
+#eureka.client.serviceUrl.defaultZone=http://localhost:7070/eureka/
+
+
+test=123
