--- a/config/discovery-client-dev.properties
+++ b/config/discovery-client-dev.properties
@@ -1,1 +1,12 @@
-test=123456
+test=hello
+spring.application.name=discovery-client
+server.port=8099
+
+feign.hystrix.enabled=true
+
+eureka.client.service-url.defaultZone=http://127.0.0.1:8761/eureka/
+
+#eureka.instance.hostname=localhost
+eureka.instance.metadata-map.cluster=MAIN
+
+spring.zipkin.base-url=http://localhost:9411
